--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,53 +1,1 @@
-{
-    "manifest_version": 3,
-    "name": "Roundabout: Verify Social Media Claims",
-    "short_name": "Roundabout",
-    "version": "0.0.1",
-    "description": "Get sources for claims on social media, measured by quality.",
-    
-    "permissions": ["storage", "activeTab", "tabs"],
-
-    "host_permissions": [
-        "*://*.twitter.com/*",
-        "*://*.x.com/*",
-        "*://*.reddit.com/*",
-        "*://*.instagram.com/*"
-    ],
-
-    "content_scripts": [
-        {
-        "matches": [
-            "https://www.reddit.com/*",
-            "https://reddit.com/*",
-            "https://www.instagram.com/*",
-            "https://instagram.com/*",
-            "https://x.com/*",
-            "https://twitter.com/*"
-            ],
-        "js": [
-            "content/content_script.js"
-        ],
-        "run_at": "document_idle",
-        "all_frames": false
-        }
-    ],
-
-    "background": {
-        "service_worker": "background/background.js"
-    },
-
-    "action": {
-        "default_icon": {
-            "16": "assets/RoundaboutIcon16px.png",
-            "32": "assets/RoundaboutIcon32px.png",
-            "64": "assets/RoundaboutIcon64px.png",
-            "128": "assets/RoundaboutIcon128px.png"
-        },
-        "default_title": "Roundabout",
-        "default_popup": "popup/index.html"
-    },
-
-    "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self';"
-    }
-}
+{"manifest_version":3,"name":"Roundabout: Verify Social Media Claims","short_name":"Roundabout","version":"0.0.1","description":"Get sources for claims on social media, measured by quality.","permissions":["storage","activeTab","tabs"],"host_permissions":["*://*.twitter.com/*","*://*.x.com/*","*://*.reddit.com/*","*://*.instagram.com/*","https://api.search.brave.com/*"],"content_scripts":[{"matches":["https://www.reddit.com/*","https://reddit.com/*","https://www.instagram.com/*","https://instagram.com/*","https://x.com/*","https://twitter.com/*"],"js":["search/claim-detection.js","content/content_script.js"],"run_at":"document_idle","all_frames":false}],"background":{"service_worker":"background/background.js"},"action":{"default_icon":{"16":"assets/RoundaboutIcon16px.png","32":"assets/RoundaboutIcon32px.png","64":"assets/RoundaboutIcon64px.png","128":"assets/RoundaboutIcon128px.png"},"default_title":"Roundabout","default_popup":"popup/index.html"},"content_security_policy":{"extension_pages":"script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"}}
